fix: Align .read-card

--- a/표승연/css/gc-read.css
+++ b/표승연/css/gc-read.css
@@ -15,6 +15,8 @@
 }
 
 .gc-read .read-card {
+  display: flex;
+  flex-direction: column;
   width: 50%;
   padding: 20px 48px 50px;
   margin-right: 20px;
@@ -23,6 +25,10 @@
 
 .gc-read .read-card:last-child {
   margin-right: 0;
+}
+
+.gc-read .read-card .read-card-wrapper {
+  flex-grow: 1;
 }
 
 .read-card .read-card-title {
